docroot/themes/custom/tower_health/components/_patterns/03-organisms/homepage-hero/_homepage-hero.scss
.homepage-hero {
  @extend %clearfix;
  position: relative;
  padding-top: 100px;
  width: 100%;

  @include breakpoint($bp2) {
    padding: 70px 2em 0;
  }

  @include breakpoint($bp3) {
    padding: 0 2em;
    margin: 4em auto 4.5em;
    max-width: 1500px;
  }
  
  @include breakpoint($bp4) {
    margin: 5.5em auto 12em;
  }
  
  @include breakpoint($bp5) {
    margin: 7em auto 12em;
  }

  .homepage-hero__content {
    background-color: $white;
    border-top: 4px solid $trust-ltr;
    border-right: 4px solid $trust-ltr;
    border-bottom: 4px solid $trust-ltr;
    border-radius: 0 5px 5px 0;
    width: 96%;
    padding: 2em 1em 2em 2em;
    margin-top: 40%;
    box-shadow: 0 2px 8px rgba($black, 0.15);

    @include breakpoint($bp0) {
      width: 95%;
      margin-top: 45%;
    }

    @include breakpoint($bp2) {
      border: 4px solid $trust-ltr;
      border-radius: 5px;
      width: 90%;
      padding: 2em;
    }

    @include breakpoint($bp3) {
      border: none;
      background-color: transparent;
      margin-top: 0;
      padding-right: 45%;
      box-shadow: none;
    }

    @include breakpoint($bp4) {
      padding: 3em 50% 3em 2em;
    }

    h1 {
      @extend %track-in;
      margin: 0;

      @include breakpoint($bp3) {
        margin-left: -3.25rem;
      }

      span {
        color: $primary-dark;
        display: block;
        text-transform: uppercase;
        font-size: .9em;
        line-height: 1.05em;
        font-weight: 500;
        word-wrap: break-word;

        @include breakpoint($bp0) {
          font-size: 1em;
        }

        @include breakpoint("425px") {
          font-size: 1.15em;
        }

        @include breakpoint($bp2) {
          font-size: 1.25em;
          line-height: 1em;
        }

        @include breakpoint("775px") {
          font-size: 1.5em;
        }

        @include breakpoint($bp3) {
          font-size: 1.2em;
        }

        @include breakpoint($bp4) {
          font-size: 1.4em;
        }
        
        @include breakpoint(1400px) {
          font-size: 1.6em;
        }

        @include breakpoint($bp5) {
          font-size: 1.75em;
        }
      }

      .title--first {
        font-weight: 300;
      }

      .title--last {
        color: $trust-aa;
        font-weight: 600;
      }
    }

    .hero_subtitle {
      @extend %track-in;
      @include adjust-font-size-to($sm-heading, .9);
      margin-top: 0.5em;
      margin-bottom: 1.5em;
      font-weight: 500;

      @include breakpoint($bp3) {
        @include adjust-font-size-to($md-heading, 1.2);
        margin-left: -3rem;
      }
    }

    .homepage-hero__content__form {
      position: relative;
      z-index: 4;

      @include breakpoint($bp3, 1400px) {
        input[type="text"] {
          height: 60px;
        }

        button {
          padding: 1em 1.5em;
        }
      }
    }

    &::before {
      content: ' ';
      display: none;

      @include breakpoint($bp3) {
        display: block;
        border: 5px solid $trust-ltst;
        border-right: 0;
        border-radius: 10px 0 0 10px;
        margin: 0 auto;
        position: absolute;
        top: 0;
        left: 2em;
        right: 0;
        bottom: 0;
        z-index: -5;
      }
    }
  }

  .homepage-hero__image {
    width: 100%;
    position: absolute;
    top: 0;
    right: 0;
    z-index: -10;
    overflow: hidden;

    .image-background {
      position: relative;
      width: 110%;
      right: -10%;
    }

    @include breakpoint($bp2) {
      width: 80%;
    }

    @include breakpoint($bp3) {
      z-index: auto;
      right: 0;
      left: 50%;
      top: -5em;
      width: auto;

      .image-background {
        position: relative;
        width: 135%;
        max-width: 1000px;
        left: 0;
        right: auto;
      }
    }

    @include breakpoint(1050px) {
      top: -6em;
    }

    @include breakpoint($bp4) {
      left: 45%;
    }

    @include breakpoint($bp5) {
      top: -8em;
      right: calc(( 100vw - 1500px ) / 2 * -1);
    }
  }
}

// Animations

.cssanimations {
  
  // default states
  .homepage-hero__content {
    opacity: 0;

    &::before {
      opacity: 0;
    }
    
    @include breakpoint($bp3) {
      h1,
      h2,
      form{
        opacity: 0;
      }
    }
  }
 
  .homepage-hero__image {
    opacity: 0;
    
    .image-background.top-left .image::before {
      margin: 0;
    }
  }
  
  // animating in
  .in-view {
    .homepage-hero__content {
      @include transition(all, .75s, ease-in);
      opacity: 1;
      
      @include breakpoint(0 899px) {
        animation: fadeInLeft 1s ease-in-out forwards;
      } 
      
      &::before {
        @include transition(opacity, 1.25s, ease-out);
        opacity: 1;
      }
      
      @include breakpoint($bp3) {
        h1 {
          animation: fadeInUp .75s ease-in-out  .25s forwards;
        }
        
        h2 {
          animation: fadeInUp .75s ease-in-out  .25s forwards;
        }
        
        form {
          animation: fadeInUp .75s ease-in-out  .35s forwards;
        }
      }
    }
    
    .homepage-hero__image {
      animation: fadeInRightScale 1s ease-in-out forwards;
      
      .image-background.top-left .image::before {
        transition: all .5s ease .25s;
        margin-left: -20px;
        margin-top: -10px;
      }
    }
  }
}

